--- a/app/src/main/res/layout/activity_show_single_blog.xml
+++ b/app/src/main/res/layout/activity_show_single_blog.xml
@@ -33,11 +33,13 @@
             app:layout_constraintTop_toBottomOf="@id/blogViewHeading">
 
             <ImageView
+                android:id="@+id/singleBlogDP"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/korg_transparent" />
 
             <TextView
+                android:id="@+id/singleBlogAuthor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -47,8 +49,18 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/blogCreationDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="28th Mar, 2022"
+            android:layout_marginTop="10dp"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@+id/blogViewBody"
+            app:layout_constraintTop_toBottomOf="@+id/blogViewBody" />
+
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/singleBlogImage"
             android:layout_width="0dp"
             android:layout_height="300dp"
             android:layout_marginTop="20dp"
@@ -63,16 +75,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4">
+            app:layout_constraintStart_toStartOf="@+id/singleBlogImage"
+            app:layout_constraintTop_toBottomOf="@+id/singleBlogImage">
 
             <ImageButton
+                android:id="@+id/likeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
                 android:background="@color/white"
                 android:src="@drawable/unliked_24"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <ImageButton
+                android:id="@+id/commentBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:src="@drawable/comment_24"
+                android:layout_marginStart="5dp"
                 tools:ignore="TouchTargetSizeCheck" />
 
 
@@ -85,7 +109,7 @@
             android:text="TextView"
             android:layout_marginTop="5dp"
             android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="@+id/singleBlogImage"
             app:layout_constraintStart_toStartOf="@+id/linearLayout3"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
