--- a/app/src/main/res/layout/blog_item.xml
+++ b/app/src/main/res/layout/blog_item.xml
@@ -25,8 +25,8 @@
             android:id="@+id/blog_heading"
             style="@style/navigation_text"
             android:layout_width="0dp"
-            android:textSize="15sp"
-            android:layout_marginStart="30sp"
+            android:textSize="19sp"
+            android:layout_marginStart="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/characterImage"
             app:layout_constraintTop_toTopOf="@+id/characterImage"
@@ -62,6 +62,7 @@
                 android:fontFamily="@font/segoeui"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="12sp"
                 tools:text="By Basu" />
 
             <TextView
@@ -73,6 +74,7 @@
                 android:fontFamily="@font/segoeui"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="12sp"
                 tools:text="11th Mar, 2022" />
 
         </LinearLayout>
