--- a/app/src/main/res/layout/activity_show_single_blog.xml
+++ b/app/src/main/res/layout/activity_show_single_blog.xml
@@ -10,13 +10,14 @@
 
         <TextView
             android:id="@+id/blogViewHeading"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Blog Heading"
-            android:textSize="32sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
             android:layout_margin="20dp"
+            android:text="Blog Heading"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
