--- a/app/src/main/res/layout/activity_show_single_blog.xml
+++ b/app/src/main/res/layout/activity_show_single_blog.xml
@@ -13,7 +13,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="Blog Heading"
             android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -41,7 +40,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:textSize="12sp"
-                android:text="Basu Singh" />
+                />
 
         </LinearLayout>
 
@@ -49,7 +48,6 @@
             android:id="@+id/blogCreationDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="28th Mar, 2022"
             android:layout_marginTop="10dp"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="@+id/blogViewBody"
@@ -60,6 +58,8 @@
             android:layout_width="0dp"
             android:layout_height="300dp"
             android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            android:background="@drawable/image_bg"
             app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
             app:layout_constraintStart_toStartOf="@+id/linearLayout2"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
@@ -102,7 +102,7 @@
             android:id="@+id/blogViewBody"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+
             android:layout_marginTop="5dp"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/singleBlogImage"
