--- a/app/src/main/res/layout/activity_show_single_blog.xml
+++ b/app/src/main/res/layout/activity_show_single_blog.xml
@@ -20,50 +20,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/blogViewHeading">
-
-
-            <TextView
-                android:id="@+id/singleBlogAuthor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:textSize="12sp"
-                />
-
-        </LinearLayout>
 
         <TextView
             android:id="@+id/blogCreationDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@+id/blogViewBody"
-            app:layout_constraintTop_toBottomOf="@+id/blogViewBody" />
+            android:textSize="11sp"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="viewEnd"
+            app:layout_constraintBottom_toBottomOf="@+id/singleBlogAuthor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/singleBlogAuthor"
+            app:layout_constraintTop_toTopOf="@+id/singleBlogAuthor" />
 
         <ImageView
             android:id="@+id/singleBlogImage"
             android:layout_width="0dp"
             android:layout_height="300dp"
-            android:layout_marginTop="20dp"
-            android:scaleType="fitXY"
+            android:layout_marginTop="10dp"
             android:background="@drawable/image_bg"
-            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
-            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            android:src="@drawable/korg" />
+            android:scaleType="fitXY"
+            android:src="@drawable/korg"
+            app:layout_constraintEnd_toEndOf="@id/blogCreationDate"
+            app:layout_constraintStart_toStartOf="@+id/singleBlogAuthor"
+            app:layout_constraintTop_toBottomOf="@+id/singleBlogAuthor" />
 
         <LinearLayout
             android:id="@+id/linearLayout3"
@@ -88,11 +69,11 @@
                 android:id="@+id/commentBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
                 android:background="@color/white"
                 android:src="@drawable/comment_24"
-                android:layout_marginStart="5dp"
                 tools:ignore="TouchTargetSizeCheck" />
 
 
@@ -102,12 +83,24 @@
             android:id="@+id/blogViewBody"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="5dp"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/singleBlogImage"
             app:layout_constraintStart_toStartOf="@+id/linearLayout3"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+        <TextView
+            android:id="@+id/singleBlogAuthor"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/blogCreationDate"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/blogViewHeading" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
