--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -14,14 +14,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:hint="Enter a comment"
             android:layout_marginEnd="3dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:hint="Enter a comment"
+            app:layout_constraintBottom_toBottomOf="@+id/postComment"
             app:layout_constraintEnd_toStartOf="@+id/postComment"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/postComment"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="@+id/postComment" />
 
         <ImageButton
             android:id="@+id/postComment"
@@ -40,11 +39,11 @@
             android:id="@+id/commentsRV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="5dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/enterComment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/comment_item"/>
+            tools:listitem="@layout/comment_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
