--- a/app/src/main/res/drawable-v24/popular_blog_bg.xml
+++ b/app/src/main/res/drawable-v24/popular_blog_bg.xml
@@ -4,10 +4,10 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/popular_blog_color"/>
+        android:color="@color/button_color"/>
 
     <stroke
-        android:color="@color/popular_blog_color"
+        android:color="@color/button_color"
         android:width="1dp"/>
 
     <corners
