--- a/app/src/main/res/layout/homepage_layout.xml
+++ b/app/src/main/res/layout/homepage_layout.xml
@@ -57,7 +57,7 @@
                     android:layout_marginTop="10dp"/>
 
                 <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/popularBlogShimmer"
+                    android:id="@+id/postsShimmer"
                     android:layout_width="410dp"
                     android:layout_height="290dp"
                     android:layout_marginTop="70dp">
@@ -79,7 +79,7 @@
                 </com.facebook.shimmer.ShimmerFrameLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/popularBlogRv"
+                    android:id="@+id/postsRV"
                     android:layout_width="410dp"
                     android:layout_height="290dp"
                     android:layout_marginTop="70dp"
@@ -143,7 +143,7 @@
                 </com.facebook.shimmer.ShimmerFrameLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/allBlogsRv"
+                    android:id="@+id/recentBlogsRV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbarStyle="insideOverlay"
