--- a/app/src/main/res/layout/popular_blog_item.xml
+++ b/app/src/main/res/layout/popular_blog_item.xml
@@ -5,6 +5,7 @@
 
 
     <LinearLayout
+        android:id="@+id/postLayout"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
