--- a/app/src/main/res/layout/popular_blog_item.xml
+++ b/app/src/main/res/layout/popular_blog_item.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <LinearLayout
         android:id="@+id/postLayout"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="280dp"
         android:orientation="vertical"
+        android:gravity="bottom"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/popular_blog_bg"
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="225dp"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/cap" />
 
@@ -26,6 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
             android:orientation="horizontal">
 
             <TextView
