--- a/app/src/main/res/layout/homepage_layout.xml
+++ b/app/src/main/res/layout/homepage_layout.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Popular"
+                    android:text="Posts"
                     android:textColor="@color/white"
                     android:textSize="28sp"
                     android:layout_marginStart="20dp"
@@ -45,6 +45,7 @@
                     android:fontFamily="@font/segoeui"/>
 
                 <TextView
+                    android:id="@+id/todayDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mon, Mar 14, 2022"
