--- a/app/src/main/res/layout/homepage_layout.xml
+++ b/app/src/main/res/layout/homepage_layout.xml
@@ -174,8 +174,8 @@
                 android:clickable="true"
                 app:backgroundTint="@color/popular_blog_color"
                 app:tint="@color/white"
+                android:visibility="invisible"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="5dp"
                 android:contentDescription="@string/upload_post_or_blog"
                 app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                 android:focusable="true" />
@@ -186,9 +186,9 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 app:tint="@color/white"
+                android:visibility="invisible"
                 app:backgroundTint="@color/popular_blog_color"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="5dp"
                 android:contentDescription="@string/upload_post_or_blog"
                 app:srcCompat="@drawable/edit"
                 android:focusable="true" />
