--- a/app/src/main/res/layout/own_upload_item.xml
+++ b/app/src/main/res/layout/own_upload_item.xml
@@ -10,10 +10,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:elevation="10dp"
-            android:padding="10dp"
-            app:cardCornerRadius="50dp">
+            android:layout_margin="3dp">
 
             <ImageView
                 android:id="@+id/userPostPic"
