--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -14,4 +14,24 @@
         android:title="Log out"
         android:icon="@drawable/logout"/>
 
+    <item android:title="See All">
+        <menu>
+            <item
+                android:id="@+id/miAllPosts"
+                android:title="Posts"
+                android:icon="@drawable/posts_24"/>
+
+            <item
+                android:id="@+id/miAllBlogs"
+                android:title="Blogs"
+                android:icon="@drawable/blogs_24"/>
+
+            <item
+                android:id="@+id/miAllUsers"
+                android:title="Users"
+                android:icon="@drawable/person_24"/>
+
+        </menu>
+    </item>
+
 </menu>
