--- a/app/src/main/res/layout/activity_show_all_posts.xml
+++ b/app/src/main/res/layout/activity_show_all_posts.xml
@@ -8,30 +8,6 @@
         android:layout_height="match_parent"
         tools:context=".ui.ShowAllPostsActivity">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/postSearchInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
-            android:hint="Search for a Blog"
-            android:textColorHint="@color/main_theme_color"
-            app:startIconDrawable="@drawable/ic_baseline_search_24"
-            app:startIconTint="@color/main_theme_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/postSearchInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="@color/main_theme_color"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/allPostsRV"
             android:layout_width="match_parent"
@@ -39,7 +15,7 @@
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/postSearchInputLayout" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
