--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -18,7 +18,7 @@
             app:checkedChip="@+id/allChip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/blogSearchInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/newsSearchInputLayout"
             app:selectionRequired="true"
             app:singleSelection="true">
 
@@ -53,7 +53,7 @@
         </com.google.android.material.chip.ChipGroup>
 
         <LinearLayout
-            android:id="@+id/blogSearchInputLayout"
+            android:id="@+id/newsSearchInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -71,7 +71,7 @@
                 android:src="@drawable/ic_baseline_search_24" />
 
             <EditText
-                android:id="@+id/blogSearchInput"
+                android:id="@+id/newsSearchInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
