--- a/app/src/main/res/layout/blog_item.xml
+++ b/app/src/main/res/layout/blog_item.xml
@@ -7,15 +7,15 @@
         android:id="@+id/blogLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="20dp"
         android:padding="5dp">
 
         <ImageView
             android:id="@+id/characterImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/korg"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +25,7 @@
             android:id="@+id/blog_heading"
             style="@style/navigation_text"
             android:layout_width="0dp"
+            android:layout_marginTop="10dp"
             android:textSize="17sp"
             android:maxLines="1"
             android:layout_marginStart="30dp"
@@ -51,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/characterImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/characterImage">
