Added edit page nav

--- a/app/src/main/res/layout/activity_add_blog.xml
+++ b/app/src/main/res/layout/activity_add_blog.xml
@@ -22,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:background="@color/white"
             android:hint="Enter the heading of the blog"
             android:maxLines="1"
             android:minHeight="48dp"
@@ -38,8 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:background="@color/white"
-            android:hint="Write what's on you mind, elaborate the topic"
+            android:hint="Write what's on you mind"
             android:maxLines="9"
             android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
