--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -23,8 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:background="@color/white"
-            android:hint="Write what's on you mind, elaborate the topic"
+            android:hint="Write what's on you mind"
             android:maxLines="9"
             android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
