--- a/app/src/main/res/menu/submit_changes_menu.xml
+++ b/app/src/main/res/menu/submit_changes_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/miEdit"
-        android:title="Edit"
-        android:icon="@drawable/edit"
-        android:tooltipText="Edit profile"
+        android:id="@+id/miSubmit"
+        android:title="Submit"
+        android:tooltipText="Submit"
+        android:icon="@drawable/ic_baseline_check_24"
         app:showAsAction="always"/>
 </menu>
