--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -13,8 +13,6 @@
             android:id="@+id/editProfiePic"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:scaleType="fitXY"
-            android:alpha="0.7"
             android:src="@drawable/korg_something"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,40 +22,41 @@
             android:id="@+id/editProfiePicButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="264dp"
+            android:layout_marginTop="272dp"
             android:clickable="true"
             android:contentDescription="@string/upload_post_or_blog"
             android:elevation="40dp"
             android:focusable="true"
             android:padding="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/editProfiePic"
-            app:layout_constraintEnd_toEndOf="@+id/editProfiePic"
+            app:layout_constraintStart_toStartOf="@+id/editProfiePic"
+            app:layout_constraintTop_toTopOf="@+id/editProfiePic"
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/editUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter a username"
-            android:layout_marginTop="15dp"
+            android:hint="Enter an username"
             android:inputType="textPersonName"
             android:maxLines="1"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editProfiePic" />
+            app:layout_constraintTop_toBottomOf="@+id/editProfiePicButton" />
 
         <EditText
+            android:id="@+id/editEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter an email"
             android:layout_marginTop="10dp"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintTop_toBottomOf="@+id/editUsername" />
 
 
 
