--- a/app/src/main/res/drawable/follow_bg.xml
+++ b/app/src/main/res/drawable/follow_bg.xml
@@ -4,10 +4,10 @@
     android:shape="rectangle">
 
     <stroke
-        android:color="@color/white"
+        android:color="@color/main_theme_color"
         android:width="2dp"/>
 
     <corners
-        android:radius="40dp"/>
+        android:radius="15dp"/>
 
 </shape>
