--- a/app/src/main/res/layout/single_user_item.xml
+++ b/app/src/main/res/layout/single_user_item.xml
@@ -6,13 +6,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/userItemLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/otherUserDP"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/korg_something"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,20 @@
             app:layout_constraintStart_toEndOf="@+id/otherUserDP"
             app:layout_constraintTop_toBottomOf="@+id/otherUserUsername"
             tools:text="Followers: 2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/unfollow_bg"
+            android:padding="10dp"
+            android:text="UNFOLLOW"
+            android:textSize="15sp"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/otherUserFollowers"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/otherUserUsername" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
