--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -19,19 +19,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addProfilePic"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/search_field_bg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:contentDescription="@string/upload_post_or_blog"
             android:elevation="40dp"
+            android:focusable="true"
             android:padding="0dp"
-            android:src="@drawable/ic_baseline_add_24"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="@+id/userProfilePic"
-            app:layout_constraintEnd_toEndOf="@+id/userProfilePic" />
+            app:layout_constraintEnd_toEndOf="@+id/userProfilePic"
+            app:srcCompat="@drawable/ic_baseline_add_24"
+            app:tint="@color/white" />
+
 
         <TextView
             android:id="@+id/textView"
